Animation is not evaluated when collection is included into view layer #81265

Closed
opened 2020-09-28 22:39:36 +02:00 by Oleksii Sushkevych · 4 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35

Blender Version
Broken: version: 2.90.1, branch: master, commit date: 2020-09-23 06:43, hash: 3e85bb34d0
Worked: Never

Short description of error
When some object with animation is inside a collection and this collection is excluded from View Layer
image.png
the animation is not evaluated when the collection is included back to the View Layer.
There is a workaround - need to change the animation frame.
Note that this behavior doesn't affect render - it's just for the 3D viewport.

Exact steps for others to reproduce the error

Hello,

To reproduce the issue please follow the next steps:

  • open the attached blend file
    anim-issue.blend
  • note where the Cube is placed image.png
  • exclude test collection from View Layer image.png
  • set animation frame to 30 or another image.png
  • include test collection back to View Layer image.png

Expected result: The cube position should be calculated depending on the related animation.
image.png

Actual result: The cube appears in the same place as it was before excluding the containing collection.
image.png

Best regards and thank you!

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 **Blender Version** Broken: version: 2.90.1, branch: master, commit date: 2020-09-23 06:43, hash: `3e85bb34d0` Worked: Never **Short description of error** When some object with animation is inside a collection and this collection is excluded from View Layer ![image.png](https://archive.blender.org/developer/F8933124/image.png) the animation is not evaluated when the collection is included back to the View Layer. There is a workaround - need to change the animation frame. Note that this behavior doesn't affect render - it's just for the 3D viewport. **Exact steps for others to reproduce the error** Hello, To reproduce the issue please follow the next steps: - open the attached blend file [anim-issue.blend](https://archive.blender.org/developer/F8933140/anim-issue.blend) - note where the Cube is placed ![image.png](https://archive.blender.org/developer/F8933146/image.png) - exclude test collection from View Layer ![image.png](https://archive.blender.org/developer/F8933149/image.png) - set animation frame to 30 or another ![image.png](https://archive.blender.org/developer/F8933153/image.png) - include test collection back to View Layer ![image.png](https://archive.blender.org/developer/F8933159/image.png) Expected result: The cube position should be calculated depending on the related animation. ![image.png](https://archive.blender.org/developer/F8933178/image.png) Actual result: The cube appears in the same place as it was before excluding the containing collection. ![image.png](https://archive.blender.org/developer/F8933171/image.png) Best regards and thank you!

Added subscriber: @asushkevych

Added subscriber: @asushkevych

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 8a2270efc5

This issue was referenced by 8a2270efc52a5f9de1255475ee069288ceca4195

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2020-11-26 11:11:40 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81265
No description provided.