Fix T81265: Animation is not evaluated when collection is included into view layer.

Just tag objects in un-excluded viewlayer for animation update.